hettyversion/static/style.css
html {
	height: 100%;
}

body {
	min-height: 100%;
}

.btn {
	margin-bottom: 10px;
}

.nav {
	background: white;
}

.nav>li {
	display: inline-block;
}

#header {
    border-bottom: 1px solid #bbb;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}

#content {
	padding-top: 40px;
}

#footer {
    border-top: 1px solid #bbb;
    padding: 10px;
    background: #404040;
    color: white;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
}

.home {
    background-image: url(/static/img/psychedelic-girl.jpg);
    background-size: cover;
}

.jumbotron-home {
    text-align: center;
    color: white;
    text-shadow: 0 0 5px rgba(0,0,0,0.5), 2px 2px 2px rgba(0,0,0,0.75);
    background: transparent;
}

